--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -97,6 +97,45 @@
                             }
                         }
                     }
+                    > .RangeInput{
+                        margin-top: 8px;
+                        > .content{
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-between;
+                            > .title{
+                                font-size: 1.6rem;
+                                line-height: 25px;
+                                color: #292929;
+                            }
+                            > .valueWrapper{
+                                margin-top: 0;
+                                margin-bottom: 0;
+                                > .unit{
+                                    padding-right: 2px;
+                                    padding-top: 3px;
+                                    font-size: 1.4rem;
+                                }
+                                > .textInput{
+                                    width: 50px;
+                                    font-size: 2.1rem;
+                                }
+                                > .comment{
+                                    min-width: 40px;
+                                    position: static;
+                                    font-size: 1.6rem;
+                                    text-align: right;
+                                    line-height: 26px;
+                                }
+                            }
+                            > .rangeInput{
+                                display: none;
+                            }
+                            > .rangeInfoWrapper{
+                                display: none;
+                            }
+                        }
+                    }
                 }
             }
             > .settings{
@@ -206,6 +245,22 @@
                                         background-color: #012;
                                         color: #ddd;
                                     }
+                                }
+                            }
+                        }
+                        > .RangeInput{
+                            > .content{
+                                > .title{
+                                    color: #ddd;
+                                }
+                                > .valueWrapper{
+                                    > .textInput{
+                                        width: 50px;
+                                        font-size: 2.1rem;
+                                    }
+                                }
+                                > .rangeInfoWrapper{
+                                    display: none;
                                 }
                             }
                         }
