--- a/src/components/RangeInput/RangeInput.scss
+++ b/src/components/RangeInput/RangeInput.scss
@@ -125,7 +125,7 @@
                 }
                 > .comment{
                     color: #afafaf;
-                    > .SelectInput.inline{
+                    > .SelectInput{
                         > .title{
                             color: #afafaf;
                         }
