--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -93,7 +93,7 @@
 }
 
 .Header {
-  height: 58px;
+  min-height: 58px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -174,6 +174,8 @@
 .Header > .menu > .endButtonsContainer > .themeButton {
   background-image: url(/src/icons/moon_111.svg);
   background-size: 24px auto;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .Header > .menu > .endButtonsContainer > .menuButton {
@@ -204,6 +206,8 @@
 
 .darkMode .Header > .menu > .endButtonsContainer > .themeButton {
   background-image: url(/src/icons/sun_fff.svg);
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .darkMode .Header > .menu > .endButtonsContainer > .menuButton {
