some color correction

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -150,7 +150,7 @@
 
 .Info > .container > .perTimeWrapper > .timeCostWrapper > .amountWrapper > a {
   font-weight: bold;
-  color: #555;
+  color: #4b4b4b;
   display: block;
 }
 
