--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -99,7 +99,7 @@
                     display: flex;
                     > a{
                         font-weight: bold;
-                        color: #555;
+                        color: #4b4b4b;
                         display: block;
                     }
                     > .currency{
