--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -80,11 +80,11 @@
 }
 
 .App.darkMode {
-  background-color: #000b23;
+  background-color: #000b27;
 }
 
 .App.darkMode > .window > .rightSide {
-  background-color: #000b23;
+  background-color: #000b27;
 }
 
 /*
@@ -296,12 +296,6 @@
     -webkit-transition: opacity 200ms linear;
     transition: opacity 200ms linear;
   }
-  .App > .window > .leftSide > .formWrapper > .formContainer > .Form > .inputsContainer .RangeInput .textInput {
-    font-size: 3rem;
-  }
-  .App > .window > .leftSide > .formWrapper > .formContainer > .Form > .inputsContainer .SelectInput .select {
-    font-size: 2.6rem;
-  }
   .App > .window > .leftSide > .formWrapper > .formContainer > .Form > .calcButtonWrapper {
     display: block;
   }
@@ -377,7 +371,7 @@
   .App > .window > .rightSide > .infoWrapper .Info > .container > .titleWrapper > .bigText > .costs,
   .App > .window > .rightSide > .infoWrapper .Info > .container > .titleWrapper > .bigText > .willBe {
     font-size: 3.4rem;
-    color: #555;
+    color: #3d3d3d;
   }
   .App > .window > .rightSide > .infoWrapper .Info > .container > .titleWrapper > .bigText > .benefits {
     font-weight: normal;
@@ -598,7 +592,7 @@
 
 @media only screen and (max-width: 1000px) {
   .App.darkMode > .window > .rightSide > .infoWrapper > .Info {
-    background-color: #000b23;
+    background-color: #000b27;
   }
   .App.darkMode > .window > .rightSide > .infoWrapper > .Info > .container > .titleWrapper > .bigText > .costs,
   .App.darkMode > .window > .rightSide > .infoWrapper > .Info > .container > .titleWrapper > .bigText > .willBe {
