--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -25,8 +25,11 @@
 .Chart > .verticalColum > a {
   width: 45px;
   display: block;
-  color: #bbb;
+  color: #aaa;
   font-size: 1.4rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .Chart > .columnsWrapper {
