Settings: close button background on dark theme

--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -223,6 +223,7 @@
             > .closeButton{
                 background-color: #012;
                 background-image: url(/src/icons/down_fff.svg);
+                @extend .darkTransparentBackground;
             }
             > .containersWrapper{
                 color: #ddd;
