--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -27,28 +27,28 @@
   cursor: default;
 }
 
-.darkTransparentBackground {
+.darkTransparentBackground, .darkMode .Settings > .window > .closeButton {
   -webkit-transition: background-color 200ms ease-in-out;
   transition: background-color 200ms ease-in-out;
 }
 
-.darkTransparentBackground:enabled:active {
+.darkTransparentBackground:enabled:active, .darkMode .Settings > .window > .closeButton:enabled:active {
   background-color: rgba(255, 255, 255, 0.15) !important;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .darkTransparentBackground:enabled:hover {
+  .darkTransparentBackground:enabled:hover, .darkMode .Settings > .window > .closeButton:enabled:hover {
     background-color: rgba(255, 255, 255, 0.15) !important;
   }
-  .darkTransparentBackground:enabled:focus {
+  .darkTransparentBackground:enabled:focus, .darkMode .Settings > .window > .closeButton:enabled:focus {
     background-color: rgba(255, 255, 255, 0.2) !important;
   }
-  .darkTransparentBackground:enabled:active {
+  .darkTransparentBackground:enabled:active, .darkMode .Settings > .window > .closeButton:enabled:active {
     background-color: rgba(255, 255, 255, 0.25) !important;
   }
 }
 
-.darkTransparentBackground:disabled {
+.darkTransparentBackground:disabled, .darkMode .Settings > .window > .closeButton:disabled {
   opacity: 0.5;
   cursor: default;
 }
