--- a/src/components/CookieAck/CookieAck.scss
+++ b/src/components/CookieAck/CookieAck.scss
@@ -43,7 +43,7 @@
                     max-width: 225px;
                     height: 100%;
                     max-height: 225px;
-                    background: transparent url(/src/icons/cookie.svg) no-repeat center / 100% 100%;
+                    background: transparent url(/src/assets/cookie.svg) no-repeat center / 100% 100%;
                 }
             }
             > .bottomArea{
