migration from importing css to sass

--- a/src/stylesheets/_App.mobile.scss
+++ b/src/stylesheets/_App.mobile.scss
@@ -135,7 +135,7 @@
                             }
                             > .calcButtonWrapper{
                                 > .calcButton{
-                                    background-image: url(/src/assets/down_fff.svg);
+                                    background-image: url(../assets/down_fff.svg);
                                     background-size: 27px auto;
                                     transform: rotate(360deg);
                                 }
