--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -2,7 +2,7 @@
 
 @font-face{
     font-family:Ubuntu_Regular;
-    src:url(/src/assets/Ubuntu-regular.ttf);
+    src:url(../assets/Ubuntu-regular.ttf);
 }
 
 html{
