--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -25,7 +25,7 @@
         > .calcButton{
             width: 60px;
             height: 60px;
-            background: #027 url(/src/assets/logo_fff.svg) no-repeat center / 24px auto;
+            background: #027 url(../../assets/logo_fff.svg) no-repeat center / 24px auto;
             border-radius: 50%;
             transition: all 200ms ease-in-out;
         }
