Slightly darker colors for labels in dark mode

--- a/src/components/RangeInput/RangeInput.scss
+++ b/src/components/RangeInput/RangeInput.scss
@@ -108,7 +108,7 @@
     .RangeInput{
         > .content{
             > .title{
-                color: #afafaf;
+                color: #aaa;
             }
             > .valueWrapper{
                 > .unit{
