--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -26,6 +26,7 @@
         flex: 1;
         display: flex;
         justify-content: space-between;
+        overflow: hidden;
         > .barContainer{
             width: 40px;
             display: flex;
@@ -58,7 +59,7 @@
                     padding-top: 5px;
                     border-radius: 5px;
                     background-color: #e8e8e8;
-                    transition: all 3.5s ease;
+                    transition: all .5s ease;
                 }
             }
             > .barWrapper:hover,
