--- a/src/components/RangeInput/RangeInput.scss
+++ b/src/components/RangeInput/RangeInput.scss
@@ -83,7 +83,7 @@
         }
         > .rangeInfoWrapper{
             width: 100%;
-            padding-top: 3px;
+            margin-top: 3px;
             display: flex;
             justify-content: space-between;
             > a{
