--- a/src/components/RangeInput/RangeInput.scss
+++ b/src/components/RangeInput/RangeInput.scss
@@ -12,6 +12,8 @@
     align-items: center;
     > .content{
         width: 100%;
+        display: flex;
+        flex-direction: column;
         opacity: 1;
         transition: opacity 350ms ease-in-out;
         > .title{
@@ -83,7 +85,7 @@
         }
         > .rangeInfoWrapper{
             width: 100%;
-            margin-top: 3px;
+            padding-top: 3px;
             display: flex;
             justify-content: space-between;
             > a{
